--- a/easyPhotos/src/main/res/xml/file_paths_public.xml
+++ b/easyPhotos/src/main/res/xml/file_paths_public.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <paths>
-        <root-path
-            name="camera_photos"
-            path="" />
-    </paths>
-</resources>
+<paths>
+    <external-files-path
+        name="camera_photos"
+        path="DCIM" />
+</paths>
